templates/lab01_infra_wrkshp_waf.yml
---
## Protecting Workloads on AWS - Lab 1 - AWS WAF
##
## Changelog:
##  - Initial release
##
## Dependencies:
## none

AWSTemplateFormatVersion: '2010-09-09'
Description: WAF Workshop Demo

## Parameters
Parameters:
  az1:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: The availability zone for the subnets in set 1
  az2:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: The availability zone for the subnets in set 2
  EC2InstanceSize:
    Default: "t3.small"
    Description: Instance size for Web Servers.
    Type: String
    AllowedValues:
      - "t2.micro"
      - "t2.small"
      - "t2.medium"
      - "t3.micro"
      - "t3.small"
      - "t3.medium"
  MyTrustedNetwork:
    Description: Only connections from this network are allowed to your site. Enter an IP or CIDR E.g. 10.10.10.10/32. Get your current IP @ https://ifconfig.co/
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    Type: String
    Default: 0.0.0.0/0
  tagWorkload:
    Type: String
    Description: What is the workload name?
    Default: AWS Loft WAF Workshop
  UserName:
    Type: String
    AllowedPattern: ".+"
    Description: Username to add for scanning?
    Default: waflab
  PassWord:
    Type: String
    AllowedPattern: ".+"
    Description: Password to add for scanning?
#    NoEcho: 'True'
    Default: "AWS-SFOLoft187!?"
  ScannerIP01:
    Type: String
    Default: 54.156.237.144/32
    Description: Leave default
  ScannerIP02:
    Type: String
    Default: 3.208.55.167/32
    Description: Leave default
  ArtifactsBucket:
    Description: S3 bucket with artifact files (Lambda functions, templates, html files, etc.). Leave default for N. Virginia.
    Type: String
    Default: protecting-workloads-workshop
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: ArtifactsBucket S3 bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-).
      It cannot start or end with a hyphen (-).
  ArtifactsPrefix:
    Description: Path in the S3 bucket containing artifact files. Leave default for N. Virginia.
    Type: String
    Default: public
    AllowedPattern: ^[0-9a-zA-Z-/]*$
    ConstraintDescription: ArtifactsPrefix key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-),
      and forward slash (/).


## Metadata
Metadata:

## Friendly UI grouping for parameters
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Availability Zones
        Parameters:
          - az1
          - az2
      - Label:
          default: Instance Configuration
        Parameters:
        - tagWorkload
        - EC2InstanceSize
        - MyTrustedNetwork
      - Label:
          default: Scanning Credentials
        Parameters:
        - UserName
        - PassWord
        - ScannerIP01
        - ScannerIP02
      - Label:
          default: Artifact Configuration
        Parameters:
        - ArtifactsBucket
        - ArtifactsPrefix

    ParameterLabels:
      EC2InstanceSize:
        default: EC2 instance size for Web servers
      MyTrustedNetwork:
        default: Trusted Network CIDR
      az1:
        default: AZ1
      az2:
        default: AZ2
      UserName:
        default: Username to add endpoint for scanning?
      PassWord:
        default: Password to add endpoint for scanning?
      ScannerIP01:
        default: Allow incoming connections from IP of scanner. Leave default.
      ScannerIP02:
        default: Allow incoming connections from IP of scanner. Leave default.
      tagWorkload:
        default: Name for website
      ArtifactsBucket:
        default: S3 bucket for artifacts
      ArtifactsPrefix:
        default: S3 path to artifacts

## Mappings
Mappings:
  EC2AMI:
    us-east-1:
      AmznLinux: ami-0d19227302e8e4bb5
    us-east-2:
      AmznLinux: ami-0ec1948d5caef658a
    us-west-1:
      AmznLinux: ami-0c3ca2c6f4edb5546
    us-west-2:
      AmznLinux: ami-0b5913cdbba67598e
    eu-west-1:
      AmznLinux: ami-06e710681e5ee07aa
    ap-northeast-1:
      AmznLinux: ami-096629e5eb19568cc

## Resources
Resources:

## The VPC
  vpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      CidrBlock: !Sub 10.5.0.0/16
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', vpc]]

## Create an IGW & attach it to the VPC
  vpcIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', Igw]]
  attachIgwVpc:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref vpc
      InternetGatewayId: !Ref vpcIgw

## Create a public subnet in each AZ
  sub1Public:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub 10.5.1.0/24
      AvailabilityZone: !Ref az1
      MapPublicIpOnLaunch: false
      Tags:
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', PubSub1]]
  sub2Public:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub 10.5.2.0/24
      AvailabilityZone: !Ref az2
      MapPublicIpOnLaunch: false
      Tags:
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', PubSub2]]

## Associate the public subnets with a public route table
  rtbPublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', PubRoutes]]
  rteToIgw:
    Type: AWS::EC2::Route
    DependsOn: attachIgwVpc
    Properties:
      RouteTableId: !Ref rtbPublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref vpcIgw
  srta1Public:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref sub1Public
      RouteTableId: !Ref rtbPublic
  srta2Public:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref sub2Public
      RouteTableId: !Ref rtbPublic

## Create a private subnet in each AZ
  sub1Private:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub 10.5.11.0/24
      AvailabilityZone: !Ref az1
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', PrvSub1]]
  sub2Private:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub 10.5.12.0/24
      AvailabilityZone: !Ref az2
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', PrvSub2]]

## Create a NAT Gateway & EIP in each AZ
  natEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  vpcNgw:
    Type: AWS::EC2::NatGateway
    DependsOn: attachIgwVpc
    Properties:
      AllocationId: !GetAtt natEip.AllocationId
      SubnetId: !Ref sub2Public
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', Ngw]]

## Associate the private subnets with a natted route table
  rtbNat:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', NgwRoutes]]
  rteToNgw:
    Type: AWS::EC2::Route
    DependsOn: vpcNgw
    Properties:
      RouteTableId: !Ref rtbNat
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref vpcNgw
  srta1Ngw:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref sub1Private
      RouteTableId: !Ref rtbNat
  srta2Ngw:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref sub2Private
      RouteTableId: !Ref rtbNat

## Configure ALB: security group, load balancer, route 53 endpoint

  sgLoadBalancer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref vpc
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyTrustedNetwork
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref ScannerIP01
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref ScannerIP02
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', AlbSg]]

  Alb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Name: !Join ["-" , [!Ref 'AWS::StackName', Alb]]
      SecurityGroups: [ !Ref sgLoadBalancer ]
      Subnets: [ !Ref sub1Public, !Ref sub2Public ]
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', Alb]]

  AlbTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /health.php
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Name: !Join ["-" , [!Ref 'AWS::StackName', TargGrp]]
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref vpc
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', TargGrp]]

  AlbListenerHttp:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: [ AlbTargetGroup ]
    Properties:
      LoadBalancerArn: !Ref Alb
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref AlbTargetGroup

## Configure the ECS ASG, security group, launch configuration, IAM role, load balancer, cloudwatch log group, route53 endpoint
  sgEC2Sg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref vpc
      GroupDescription: EC2 Instance Security Group
      Tags:
        - Key: Name
          Value: !Join ["-" , [!Ref 'AWS::StackName', EC2Sg]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          SourceSecurityGroupId: !Ref sgLoadBalancer

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId:
        Fn::FindInMap:
        - EC2AMI
        - !Ref AWS::Region
        - AmznLinux
      SecurityGroups:
      - !GetAtt sgEC2Sg.GroupId
      InstanceType: !Ref EC2InstanceSize
      IamInstanceProfile:
        Ref: EC2InstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum update -y
          yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
          curl --silent --location https://rpm.nodesource.com/setup_10.x | bash -
          yum install -y nodejs httpd24 php70 curl git
          ln -s /usr/bin/node /usr/bin/nodejs
          node -v
          npm install -g bower
          /usr/bin/aws configure set region ${AWS::Region}
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfiguration --configsets site_config --region ${AWS::Region}
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource AutoScalingGroup --region ${AWS::Region}

    Metadata:
        AWS::CloudFormation::Init:
          configSets:
            site_config:
            - init_site
          init_site:
            commands:
              01getsite_content:
                cwd: /tmp
                command: "cd /tmp; curl -O https://s3.amazonaws.com/cgulliver123/archive.zip"
              02get_composer:
                cwd: /tmp
                env:
                  COMPOSER_HOME: /composer
                  COMPOSER_ALLOW_SUPERUSER: 1
                  PATH: /usr/bin:/usr/local/bin:/sbin:$PATH
                command: "curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer"
              03putsite_content: 
                cwd: /tmp
                command: "unzip -qo /tmp/archive.zip -d /var/www/ && chmod -R 755 /var/www/*"
              04install_frameworks:
                cwd: /var/www/
                env:
                  COMPOSER_HOME: /composer
                  COMPOSER_ALLOW_SUPERUSER: 1
                  PATH: /usr/bin:/usr/local/bin:/sbin:$PATH
                command: "cd /var/www/; php /usr/local/bin/composer install; bower install --allow-root; /sbin/service httpd start"


  AutoScalingGroup:
    DependsOn: Alb
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
      - !Ref sub1Private
      - !Ref sub2Private
      LaunchConfigurationName: !Ref LaunchConfiguration
      MinSize: '2'
      MaxSize: '2'
      TargetGroupARNs:
      - !Ref AlbTargetGroup
      DesiredCapacity: '2'
      HealthCheckType: ELB
      HealthCheckGracePeriod: 120
      Tags:
       -
        Key: Name
        Value: !Join ["-" , [!Ref 'AWS::StackName', node]]
        PropagateAtLaunch: true
    CreationPolicy:
      ResourceSignal:
        Timeout: PT10M
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: 'true'

## Deploy a WAF WebACL, Sample Rule, Sample IPSet
  wafBlacklistIpSet:
    Type: AWS::WAFRegional::IPSet
    Properties:
      Name: WafIpBlacklist
      IPSetDescriptors:
        - Type: IPV4
          Value: 127.0.0.0/8
        - Type: IPV6
          Value: ::1/128
  wafBlacklistIpRule:
    Type: AWS::WAFRegional::Rule
    Properties:
      MetricName: WafIpBlacklist
      Name: WafIpBlacklist
      Predicates:
        - Type: IPMatch
          Negated: false
          DataId: !Ref wafBlacklistIpSet
  wafACL:
    Type: AWS::WAFRegional::WebACL
    Properties:
      MetricName: LabWaf
      Name: LabWaf
      DefaultAction:
        Type: ALLOW
      Rules:
        - Action:
            Type: BLOCK
          Priority: 10
          RuleId: !Ref wafBlacklistIpRule

## Associate WAF ACL with load balancer
  wafALBAssociation:
    Type: AWS::WAFRegional::WebACLAssociation
    Properties:
      ResourceArn: !Ref Alb
      WebACLId: !Ref wafACL

##  Configure the EC2 IAM role along with supporting resources
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ["-" , [!Ref 'AWS::StackName', EC2Role]]
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - "sts:AssumeRole"
            Principal:
              Service:
                - "ec2.amazonaws.com"
                - "ssm.amazonaws.com"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      Policies:
        - PolicyName: inline-policy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: [ "waf-regional:GetSampledRequests", "cloudwatch:GetMetricStatistics" ]
                Resource: "*"
              -
                Effect: "Allow"
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "logs:DescribeLogStreams"
                Resource: "arn:aws:logs:*:*:*"
              -
                Action:
                  - s3:ListBucket
                Effect: Allow
                Resource:
                  - !Join ['', ['arn:aws:s3:::', !Ref 'ArtifactsBucket']]
              -
                Action:
                  - s3:GetObject
                Effect: Allow
                Resource:
                  - !Join ['', ['arn:aws:s3:::', !Ref 'ArtifactsBucket', /, !Ref 'ArtifactsPrefix', /*]]

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - Ref: EC2InstanceRole

  AddScanTarg:
    DependsOn:
      - "Alb"
    Type: "Custom::AddScanTarg"
    Version: "1.0"
    Properties:
      ServiceToken: !GetAtt AddScanTargFunction.Arn
      Region: !Ref "AWS::Region"

  AddScanTargFunction:
    Type: AWS::Lambda::Function
    Properties:
      Description: Add ALB endpoint to scanning engine
      Handler: index.handler
      Runtime: python3.7
      Environment:
        Variables:
          APIEP: https://orhqd0jp27.execute-api.us-east-1.amazonaws.com/dev/targ
          USERNAME: !Ref UserName
          PASSWORD: !Ref PassWord
          TARGID: !GetAtt Alb.DNSName
      Role: !GetAtt AddScanTargExecutionRole.Arn
      Timeout: 60
      Code:
        ZipFile: |
          import cfnresponse
          import os
          import boto3
          import time
          import json
          import datetime
          import logging
          import string
          from random import *
          from botocore.vendored import requests 
          from base64 import b64decode, b64encode
          from botocore.exceptions import ClientError
          from six.moves.urllib.parse import quote, unquote

          logger = logging.getLogger()
          logger.setLevel(logging.INFO)
          client = boto3.client('apigateway')
          APIEP = os.environ['APIEP']
          TargId = os.environ['TARGID']
          UserName = os.environ['USERNAME']
          PassWord = os.environ['PASSWORD']
          class EncodeError(Exception):
            pass
          def encode(username, password):
            if ':' in username:
                raise EncodeError
            username_password = '%s:%s' % (quote(username), quote(password))
            return 'Basic ' + b64encode(username_password.encode()).decode()
          def handler(event, context):
            url = APIEP
            AuthToken = encode(UserName, PassWord)
            timestamp = int(time.time())
            headers = {'content-type': 'application/json', 'authorizationToken': AuthToken }
            logger.info('Received event: {}'.format(json.dumps(event)))
            try:
              responseData = {}
              # Assume failure unless we get 200 response
              responseStatus = cfnresponse.FAILED
              if event['RequestType'] == 'Delete':
                payload = { "Key": { "targid": {"S": TargId } }, "TableName": "waflab" }
                response = requests.delete(url, data=json.dumps(payload), headers=headers)
                responseData = {'StatusCode': response.status_code}
                responseStatus = cfnresponse.SUCCESS
              elif event['RequestType'] == 'Create' or event['RequestType'] == 'Update':
                min_char = 8
                max_char = 8
                allchar = string.ascii_lowercase + string.digits
                UUID = "".join(choice(allchar) for x in range(randint(min_char, max_char)))
                EXP = timestamp + + 48 * 60 * 60
                payload = { "Item": { "targid": {"S": TargId }, "uuid": {"S": UUID }, "timestamp": { "N": str(timestamp) }, "ttl": {"N": str(EXP) } }, "TableName": "waflab" }
                response = requests.post(url, data=json.dumps(payload), headers=headers)
                logger.info('Response Text: {}'.format(response.text))
                responseData = {'UUID': UUID }
                if 'deny' not in response.text:
                  responseStatus = cfnresponse.SUCCESS
              else:
                responseStatus = cfnresponse.FAILED
            except ClientError as e:
              logger.error('Error: {}'.format(e))
              responseStatus = cfnresponse.FAILED
            # Log the response status
            logger.info('Returning response status of: {}'.format(responseStatus))
            # Send result to stack
            cfnresponse.send(event, context, responseStatus, responseData)
  AddScanTargExecutionRole:
      Type: AWS::IAM::Role
      Properties:
        AssumeRolePolicyDocument:
          Version: 2012-10-17
          Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
        Policies:
        - PolicyName: AddTargRole
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
            - Effect: Allow
              Action:
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:PutLogEvents
              - logs:DescribeLogStreams
              Resource: arn:aws:logs:*:*:*

## Outputs
Outputs:
  cfnVersion:
    Value: 0.1
  accountId:
    Value: !Ref AWS::AccountId
  albEndpoint:
    Value: !Join ['', ['http://', !GetAtt Alb.DNSName]]
  ScannerUUID:
    Value: !GetAtt AddScanTarg.UUID
  wafWebACL:
    Value: !Ref wafACL
